[package]
name = "bme280-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme280-rs = "0.1.0"
clap = { version = "4.0.32", features = ["derive"] }
linux-embedded-hal = "0.3.2"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
